--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,5 +36,4 @@ jobs:
         run: terraform plan
 
       - name: Terraform Apply
-        run: terraform apply
--auto-approve
+        run: terraform apply -auto-approve
