--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,8 @@ jobs:
         with:
           tenant-id: $ {{ secrets.AZURE_TENANT_ID }}
           subscription-id: $ {{ secrets.AZURE_SUBSCRIPTION_ID }}
-          allow-no-subscription: true
+          auth-type: IDENTITY_TOKEN
+          allow-no-subscription: false
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
