--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,7 @@ jobs:
         with:
           tenant-id: $ {{ secrets.AZURE_TENANT_ID }}
           subscription-id: $ {{ secrets.AZURE_SUBSCRIPTION_ID }}
-          auth-type: IDENTITY
-          allow-no-subscription: false
+          allow-no-subscription: true
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
