--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: Authenticate to Azure using OIDC
         uses: azure/login@v1
         with:
+          client-id: $ {{ secrets.AZURE_CLIENT_ID }}
           tenant-id: $ {{ secrets.AZURE_TENANT_ID }}
           subscription-id: $ {{ secrets.AZURE_SUBSCRIPTION_ID }}
           allow-no-subscription: true
